Додає фон в sollution та іконки в feature і team

--- a/index.html
+++ b/index.html
@@ -58,21 +58,33 @@
                 <h2 class="visually-hidden">Особливості</h2>
                 <ul class="feature-list list">
                     <li class="item">
+                        <svg class="icon">
+                            <use href="./images/icons/sprite.svg#icon-antenna" />
+                        </svg>
                         <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                         </p>
                     </li>
                     <li class="item">
+                        <svg class="icon">
+                            <use href="./images/icons/sprite.svg#icon-clock" />
+                        </svg>
                         <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
 
                     <li class="item">
+                        <svg class="icon">
+                            <use href="./images/icons/sprite.svg#icon-diagram" />
+                        </svg>
                         <h3 class="title">ПЛАНУВАННЯ</h3>
                         <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
 
                     <li class="item">
+                        <svg class="icon">
+                            <use href="./images/icons/sprite.svg#icon-astronaut" />
+                        </svg>
                         <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
@@ -113,6 +125,36 @@
                         <div class="label">
                             <h3 class="title">Ігор Дем'яненко</h3>
                             <p lang="en" class="text">Product Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-instagram"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-twitter"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-facebook"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-linkedin"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
@@ -121,6 +163,36 @@
                         <div class="label">
                             <h3 class="title">Ольга Рєпіна</h3>
                             <p lang="en" class="text">Frontend Developer</p>
+                            <ul class="social-list list">
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-instagram"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-twitter"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-facebook"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-linkedin"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
@@ -129,6 +201,36 @@
                         <div class="label">
                             <h3 class="title">Микола Тарасов</h3>
                             <p lang="en" class="text">Marketing</p>
+                            <ul class="social-list list">
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-instagram"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-twitter"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-facebook"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-linkedin"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item">
@@ -137,6 +239,36 @@
                         <div class="label">
                             <h3 class="title">Михайло Єрмаков</h3>
                             <p lang="en" class="text">UI Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-instagram"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-twitter"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-facebook"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="" class="link">
+                                        <svg class="icon">
+                                            <use href="./images/icons/sprite.svg#icon-linkedin"/>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
