Додає client section

--- a/index.html
+++ b/index.html
@@ -274,6 +274,56 @@
                 </ul>
             </div>
         </section>
+
+        <section class="section client-section">
+            <div class="container">
+                <h2 class="section-title">Постійні клієнти</h2>
+                <ul class="client-list list">
+                    <li class="item">
+                        <a href="" class="link">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-client-1"/>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-client-2"/>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-client-3"/>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-client-4"/>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-client-5"/>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-client-6"/>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <footer class="page-footer">
