--- a/portfolio.html
+++ b/portfolio.html
@@ -196,24 +196,62 @@
 
 
     <footer class="page-footer">
-        <div class="container">
-            <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
+        <div class="container footer-container">
+            <div class="contacts">
+                <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
 
-            <address>
-                <ul class="footer-contacts list">
-                    <li>
-                        <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="address link" target="_blank"
-                            rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі
-                            Українки, 26</a>
+                <address>
+                    <ul class="footer-contacts list">
+                        <li class="item">
+                            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="address link" target="_blank"
+                                rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі
+                                Українки, 26</a>
+                        </li>
+                        <li class="item">
+                            <a href="mailto:info@devstudio.com" class="email link">info@devstudio.com</a>
+                        </li>
+                        <li class="item">
+                            <a href="tel:+380961111111" class="tel link">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>           
+
+            <div class="social-contacts">
+                <p class="text">
+                    приєднуйтесь
+                </p>
+                <ul class="social-list list">
+                    <li class="social-item">
+                        <a href="" class="link">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-instagram"/>
+                            </svg>
+                        </a>
                     </li>
-                    <li>
-                        <a href="mailto:info@devstudio.com" class="email link">info@devstudio.com</a>
+                    <li class="social-item">
+                        <a href="" class="link">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-twitter"/>
+                            </svg>
+                        </a>
                     </li>
-                    <li>
-                        <a href="tel:+380961111111" class="tel link">+38 096 111 11 11</a>
+                    <li class="social-item">
+                        <a href="" class="link">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-facebook"/>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="" class="link">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-linkedin"/>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 
