Додає стилі для іконок

--- a/index.html
+++ b/index.html
@@ -37,10 +37,19 @@
 
             <ul class="header-contacts list">
                 <li class="item">
-                    <a href="mailto:info@devstudio.com" class="email link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="email link">
+                        <svg class="icon"  width="16"
+                        height="12">
+                            <use href="./images/icons.svg#icon-envelope" />
+                        </svg>
+                        info@devstudio.com</a>
                 </li>
                 <li class="item">
-                    <a href="tel:+380961111111" class="tel link">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="tel link">
+                        <svg class="icon" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone" />
+                        </svg>
+                        +38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -58,32 +67,32 @@
                 <h2 class="visually-hidden">Особливості</h2>
                 <ul class="feature-list list">
                     <li class="item">
-                        <svg class="icon">
-                            <use href="./images/icons/sprite.svg#icon-antenna" />
+                        <svg class="icon" width="70" height="70">
+                            <use href="./images/icons.svg#icon-antenna" />
                         </svg>
                         <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                         </p>
                     </li>
                     <li class="item">
-                        <svg class="icon">
-                            <use href="./images/icons/sprite.svg#icon-clock" />
+                        <svg class="icon" width="70" height="70">
+                            <use href="./images/icons.svg#icon-clock" />
                         </svg>
                         <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
 
                     <li class="item">
-                        <svg class="icon">
-                            <use href="./images/icons/sprite.svg#icon-diagram" />
+                        <svg class="icon" width="70" height="70">
+                            <use href="./images/icons.svg#icon-diagram" />
                         </svg>
                         <h3 class="title">ПЛАНУВАННЯ</h3>
                         <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
 
                     <li class="item">
-                        <svg class="icon">
-                            <use href="./images/icons/sprite.svg#icon-astronaut" />
+                        <svg class="icon" width="70" height="70">
+                            <use href="./images/icons.svg#icon-astronaut" />
                         </svg>
                         <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
@@ -128,29 +137,29 @@
                             <ul class="social-list list">
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-instagram"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-instagram" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-twitter"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-twitter" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-facebook"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-facebook" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-linkedin"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-linkedin" />
                                         </svg>
                                     </a>
                                 </li>
@@ -166,29 +175,29 @@
                             <ul class="social-list list">
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-instagram"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-instagram" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-twitter"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-twitter" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-facebook"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-facebook" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-linkedin"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-linkedin" />
                                         </svg>
                                     </a>
                                 </li>
@@ -204,29 +213,29 @@
                             <ul class="social-list list">
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-instagram"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-instagram" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-twitter"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-twitter" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-facebook"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-facebook" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-linkedin"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-linkedin" />
                                         </svg>
                                     </a>
                                 </li>
@@ -242,29 +251,29 @@
                             <ul class="social-list list">
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-instagram"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-instagram" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-twitter"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-twitter" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-facebook"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-facebook" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a href="" class="link">
-                                        <svg class="icon">
-                                            <use href="./images/icons/sprite.svg#icon-linkedin"/>
+                                        <svg class="icon" width="44" height="44">
+                                            <use href="./images/icons.svg#icon-linkedin" />
                                         </svg>
                                     </a>
                                 </li>
@@ -281,43 +290,43 @@
                 <ul class="client-list list">
                     <li class="item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-client-1"/>
+                            <svg class="icon" width="41" height="47">
+                                <use href="./images/icons.svg#icon-client-1" />
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-client-2"/>
+                            <svg class="icon" width="40" height="52">
+                                <use href="./images/icons.svg#icon-client-2" />
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-client-3"/>
+                            <svg class="icon" width="44" height="42">
+                                <use href="./images/icons.svg#icon-client-3" />
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-client-4"/>
+                            <svg class="icon" width="84" height="41">
+                                <use href="./images/icons.svg#icon-client-4" />
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-client-5"/>
+                            <svg class="icon" width="63" height="45">
+                                <use href="./images/icons.svg#icon-client-5" />
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-client-6"/>
+                            <svg class="icon" width="94" height="44">
+                                <use href="./images/icons.svg#icon-client-6" />
                             </svg>
                         </a>
                     </li>
@@ -346,7 +355,7 @@
                         </li>
                     </ul>
                 </address>
-            </div>           
+            </div>
 
             <div class="social-contacts">
                 <p class="text">
@@ -355,29 +364,29 @@
                 <ul class="social-list list">
                     <li class="social-item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-instagram"/>
+                            <svg class="icon" width="44" height="44">
+                                <use href="./images/icons.svg#icon-instagram" />
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-twitter"/>
+                            <svg class="icon" width="44" height="44">
+                                <use href="./images/icons.svg#icon-twitter" />
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-facebook"/>
+                            <svg class="icon" width="44" height="44">
+                                <use href="./images/icons.svg#icon-facebook" />
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-linkedin"/>
+                            <svg class="icon" width="44" height="44">
+                                <use href="./images/icons.svg#icon-linkedin" />
                             </svg>
                         </a>
                     </li>
