--- a/portfolio.html
+++ b/portfolio.html
@@ -38,10 +38,18 @@
 
             <ul class="header-contacts list">
                 <li class="item">
-                    <a href="mailto:info@devstudio.com" class="email link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="email link">
+                        <svg class="icon icon-envelope">
+                            <use href="./images/icons/sprite.svg#icon-envelope" />
+                        </svg>
+                        info@devstudio.com</a>
                 </li>
                 <li class="item">
-                    <a href="tel:+380961111111" class="tel link">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="tel link">
+                        <svg class="icon icon-smartphone">
+                            <use href="./images/icons/sprite.svg#icon-smartphone" />
+                        </svg>
+                        +38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -224,29 +232,29 @@
                 <ul class="social-list list">
                     <li class="social-item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-instagram"/>
+                            <svg class="icon" width="44" height="44">
+                                <use href="./images/icons.svg#icon-instagram" />
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-twitter"/>
+                            <svg class="icon" width="44" height="44">
+                                <use href="./images/icons.svg#icon-twitter" />
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-facebook"/>
+                            <svg class="icon" width="44" height="44">
+                                <use href="./images/icons.svg#icon-facebook" />
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="" class="link">
-                            <svg class="icon">
-                                <use href="./images/icons/sprite.svg#icon-linkedin"/>
+                            <svg class="icon" width="44" height="44">
+                                <use href="./images/icons.svg#icon-linkedin" />
                             </svg>
                         </a>
                     </li>
