--- a/portfolio.html
+++ b/portfolio.html
@@ -39,15 +39,15 @@
             <ul class="header-contacts list">
                 <li class="item">
                     <a href="mailto:info@devstudio.com" class="email link">
-                        <svg class="icon icon-envelope">
-                            <use href="./images/icons/sprite.svg#icon-envelope" />
+                        <svg class="icon" width="16" height="12">
+                            <use href="./images/icons.svg#icon-envelope" />
                         </svg>
                         info@devstudio.com</a>
                 </li>
                 <li class="item">
                     <a href="tel:+380961111111" class="tel link">
-                        <svg class="icon icon-smartphone">
-                            <use href="./images/icons/sprite.svg#icon-smartphone" />
+                        <svg class="icon" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone" />
                         </svg>
                         +38 096 111 11 11</a>
                 </li>
@@ -223,7 +223,7 @@
                         </li>
                     </ul>
                 </address>
-            </div>           
+            </div>
 
             <div class="social-contacts">
                 <p class="text">
