--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
             <ul class="header-contacts list">
                 <li class="item">
                     <a href="mailto:info@devstudio.com" class="email link">
-                        <svg class="icon"  width="16"
-                        height="12">
+                        <svg class="icon" width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope" />
                         </svg>
                         info@devstudio.com</a>
